RESOLVED FIXED60667
[Qt] WebKit does not build with GCCE
https://bugs.webkit.org/show_bug.cgi?id=60667
Summary [Qt] WebKit does not build with GCCE
Igor Trindade Oliveira
Reported 2011-05-11 15:08:12 PDT
QtWebKit does not build with GCCE(GNU Compiler Collection for Embedded).
Attachments
Patch (2.30 KB, patch)
2011-05-11 15:12 PDT, Igor Trindade Oliveira
no flags
Igor Trindade Oliveira
Comment 1 2011-05-11 15:12:41 PDT
Created attachment 93192 [details] Patch Proposed patch.
Eric Seidel (no email)
Comment 2 2011-05-11 18:30:42 PDT
Odd that this doesn't just use the GCC path.
WebKit Commit Bot
Comment 3 2011-05-11 20:39:09 PDT
Comment on attachment 93192 [details] Patch Clearing flags on attachment: 93192 Committed r86304: <http://trac.webkit.org/changeset/86304>
WebKit Commit Bot
Comment 4 2011-05-11 20:39:15 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5 2011-05-11 21:38:40 PDT
http://trac.webkit.org/changeset/86304 might have broken Leopard Intel Debug (Tests) The following tests are not passing: editing/deleting/delete-ligature-001.html editing/deleting/delete-ligature-002.html editing/deleting/delete-ligature-003.html platform/mac/editing/input/devanagari-ligature.html
Ademar Reis
Comment 6 2011-05-19 13:43:10 PDT
Revision r86304 cherry-picked into qtwebkit-2.2 with commit fd084a4 <http://gitorious.org/webkit/qtwebkit/commit/fd084a4>
Note You need to log in before you can comment on or make changes to this bug.