2011-05-11  Igor Oliveira  <igor.oliveira@openbossa.org>

Reviewed by Eric Seidel.

        WebKit does not build with GCCE
        https://bugs.webkit.org/show_bug.cgi?id=60667

        Allow compile WebKit with GCCE

        * wtf/Alignment.h:
        * wtf/Platform.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@86304 bbb929c8-8fbe-4397-9dbb-9b2b20218538